--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\arghos\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
+    "python.pythonPath": "C:\\Users\\arghos\\.virtualenvs\\CodeChallenges-9bsBNinB",
+    "editor.wordWrap": "on"
 }
