Added python project project changes # removed hard-coded venv path # enabled Flake8 as linter # disable Pylint as linter # added requirements to Pipfile and Pipfile.lock

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "stopOnEntry": true,
-            "pythonPath": "C:/Users/arghos/AppData/Roaming/Python/Python36/Scripts",//"${config:python.pythonPath}",
+            "pythonPath": "${config:python.pythonPath}",
             "program": "${file}",
             "cwd": "${workspaceFolder}",
             "env": {},
