code re-factors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/home/aloke/.virtualenvs/CodeChallenges--TS8pN6m/bin/python",
+    "python.pythonPath": "C:\\Users\\arghos\\.virtualenvs\\CodeChallenges-9bsBNinB\\scripts\\python.exe",
     "editor.wordWrap": "on",
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
