Validate if a Binary Tree is Binary Search Tree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
     "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 10000
+    "files.autoSaveDelay": 10000,
+    "telemetry.enableTelemetry": false
 }
