--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/home/aritraghosh/.local/share/virtualenvs/CodeChallenges-tX6a7Nmh/bin/python",
+    "python.pythonPath": "/usr/bin/python3",
     "editor.wordWrap": "on",
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
