--- a/Pipfile
+++ b/Pipfile
@@ -1,19 +1,15 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 requests = "*"
 "bs4" = "*"
 "flake8" = "*"
 numpy = "*"
 "autopep8" = "*"
 
-
 [dev-packages]
-
 nose = "*"
+flake8 = "*"
