Added data files, and also made the trie read and search from the data files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
     "editor.wordWrap": "on",
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
