fixed a minor bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+    "python.pythonPath": "/usr/bin/python3",
     "editor.wordWrap": "on",
-    "python.linting.flake8Enabled": true,
-    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": false,
+    "python.linting.pylintEnabled": true,
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 10000,
     "telemetry.enableTelemetry": false,
     "appService.zipIgnorePattern": [
         ".vscode{,/**}"
-    ]
+    ],
+    "python.linting.enabled": true
 }
