Changes: - re-factored delete_mails.py to update the google api dependencies - used set to store e-mail milters instead of dict, fixes the duplicate entry error - updated the mail_filter.txt

--- a/Pipfile
+++ b/Pipfile
@@ -5,13 +5,10 @@ name = "pypi"
 
 [packages]
 requests = "*"
-"bs4" = "*"
-"flake8" = "*"
+bs4 = "*"
+flake8 = "*"
 numpy = "*"
-"autopep8" = "*"
-apiclient = "*"
-httplib2 = "*"
-oauth2client = "*"
+autopep8 = "*"
 google-api-python-client = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
