added testing stuff

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ autopep8 = "*"
 google-api-python-client = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
+pytest = "*"
+pytest-mock = "*"
 
 [dev-packages]
 nose = "*"
