removed bin and obj diretories

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 .idea/
 credentials.json
 deploy-dir/
+token.pickle
 .deployment
 __pycache__/
+HandsOn/HandsOn.ConsoleApp/bin/
+HandsOn/HandsOn.ConsoleApp/obj/
